--- a/vignettes/schedule.Rmd
+++ b/vignettes/schedule.Rmd
@@ -49,16 +49,16 @@ schedule <- data.frame(WK = c("1", "", "",
       "No class (MLK Day)", "Principles of Bayesian Inference (Part 1)", "", #3
       "Principles of Bayesian Inference (Part 2)" , "Introduction to Linear Models and Nimble", "", #4
       "Generalized Linear Model Review", "Informative Priors", "", #5
-      "Random Effects", "Observation error", "", #6
-      "More about N-mixture Models", "More about N-mixture Models", "", #7
+      "Random Effects", "State Space Models", "", #6
+      "N-mixture Models", "More about N-mixture Models", "", #7
       "Zero-inflated models", "Different types of observation processes", "", #8 
       "Spring Break - No Class", "Spring Break - No Class", "", #9
       "Known Fate", "Simple Movement Models", "", #10
       "Closed-population mark-recapture", "Closed-population mark-recapture", "", #11
-      "CJS models", "CJS models", "", #12
-      "Jolly-Seber models", "Jolly-Seber models", "", #13
-      "Multi-state CMR", "Multi-state CMR", "", #14 
-      "Spatial Capture Recapture", "Spatial Capture Recapture", "", #15
+      "Open-population capture-recapture", "Spatial capture-recapture", "", #12
+      "Multi-state CMR", "Multi-state CMR", "", #13
+      "Two-stage models", "Two-stage models", "", #14 
+      "TBD", "", "", #15
       "TBD", "", "", #16
       ""), 
                        Lab = c("", "Using R Markdown/Common Mathematical Notation", "",
@@ -68,12 +68,12 @@ schedule <- data.frame(WK = c("1", "", "",
                                "", "Choosing Priors", "",
                                "", "Prior Predictive Checks", "", #be sure to include something about transformed priors
                                "", "Solving Nimble errors", "", 
-                               "", "Lab 8", "",
+                               "", "Goodness of Fit tests", "",
                                "", "", "", # Spring break
                                "", "Imputing Missing Information", "",
                                "", "Simple Model Selection and CMR", "", 
                                "", "Survival Models with Detection Error", "", 
-                               "", "Lab 12", "",
+                               "", "NimbleSCR package", "",
                                "", "Lab 13", "", 
                                "", "Lab 14", "", 
                                "", "Lab 15", "",
