--- a/vignettes/Lab4_glms.Rmd
+++ b/vignettes/Lab4_glms.Rmd
@@ -146,7 +146,7 @@ $$log(\lambda_t) = \alpha + \beta_1 \times year_t + \beta_2 \times year^2_t + \b
 
 ### Accessing and viewing the Nimble model
 
-You can copy and paste the following code into your own R script. 
+You can copy and paste the following code into your own R script.
 
 ```{r eval = TRUE, echo = T}
 library(nimble)
@@ -259,16 +259,16 @@ summary(falcon_res[,c('alpha', 'beta1', 'beta2', 'beta3', 'lambda[1]', 'lambda[2
 knitr::kable(summary(falcon_res[,c('alpha', 'beta1', 'beta2', 'beta3','lambda[1]', 'lambda[2]', 'lambda[3]')])$quantiles, format = 'html')
 ```
 
-Note that beta2 appears to cross 0 - there's not much of an effect of year^2 on lambda. 
+Note that beta2 appears to cross 0 - there's not much of an effect of year\^2 on lambda.
 
-This seems reasonable, but let's make sure the `Rhat` values are less than 1.1. To do this, we'll use the `gelman.diag()` function from the `coda` package. 
+This seems reasonable, but let's make sure the `Rhat` values are less than 1.1. To do this, we'll use the `gelman.diag()` function from the `coda` package.
 
 ```{r eval = T, echo = T}
 library(coda)
 gelman.diag(falcon_res, multivariate = F)$psrf[1:10,] #don't want to print out all 40 lambdas
 ```
 
-All parameters appear to have converged. 
+All parameters appear to have converged.
 
 As usual, let's check the trace plots to see how they look:
 
@@ -388,15 +388,15 @@ ggplot(falcons) +
   scale_y_continuous("Pairs")
 ```
 
-# Homework Questions 
+# Homework Questions
 
-Using what you've learned in this lab, write out a model for the expected number of nestlings (Eyasses) per reproducing pair (R.pairs) in each year.  
+Using what you've learned in this lab, write out a model for the expected number of nestlings (Eyasses) per reproducing pair (R.pairs) in each year.
 
-a. Begin by writing out the mathematical formulation of your model 
-b. Write out the Nimble code. 
-c. Provide your model with data, constants and initial values 
-d. Check your output for convergence 
-e. Display a ggplot showing the expected number of nestlings per reproducing pair in each year (with 95% credible interval) vs the raw data. Don't forget a title and axis labels.
+a.  Begin by writing out the mathematical formulation of your model
+b.  Write out the Nimble code.
+c.  Provide your model with data, constants and initial values
+d.  Check your output for convergence
+e.  Display a ggplot showing the expected number of nestlings per reproducing pair in each year (with 95% credible interval) vs the raw data. Don't forget a title and axis labels.
 
 It may help to plot the data first to see what type of data you are working with:
 
@@ -407,8 +407,8 @@ ggplot(falcons, aes(x = Year, y = Eyasses/R.Pairs))+
   geom_smooth()
 ```
 
-2. In our second analysis, we used a binomial GLM to describe the proportion of successful peregrine pairs per year in the French Jura mountains. To see the connections between three important types of GLMs, first use a Poisson GLM to model the number of successful pairs (thus disregarding the fact that the binomial total varies by year), and second, use a normal GLM to do the same. In the same graph, compare the predicted numbers of successful pairs for every year under all three models (binomial, Poisson, and normal GLMs). [This assignment stolen directly from the WinBUGS book, so blame Marc Kéry and Michael Schaub for this one.]
+2.  In our second analysis, we used a binomial GLM to describe the proportion of successful peregrine pairs per year in the French Jura mountains. To see the connections between three important types of GLMs, first use a Poisson GLM to model the number of successful pairs (thus disregarding the fact that the binomial total varies by year), and second, use a normal GLM to do the same. In the same graph, compare the predicted numbers of successful pairs for every year under all three models (binomial, Poisson, and normal GLMs). [This assignment stolen directly from the WinBUGS book, so blame Marc Kéry and Michael Schaub for this one.]
 
-Note: If you find that your normal distribution model predicts extremely low counts, be sure to look at your priors. If selected correctly, you should see all 3 models roughly overlap the raw data. 
+Note: If you find that your normal distribution model predicts extremely low counts, be sure to look at your priors. If selected correctly, you should see all 3 models roughly overlap the raw data.
 
-3. On a 1-10 scale, with 1 being the worst week ever and 10 being the best, how would you rate this week's content? What lingering questions/confusion about the lecture or lab do you still have? 
+3.  On a 1-10 scale, with 1 being the worst week ever and 10 being the best, how would you rate this week's content? What lingering questions/confusion about the lecture or lab do you still have?
