--- a/docs/articles/lectures/08_occupancy/08_occupancy.Rmd
+++ b/docs/articles/lectures/08_occupancy/08_occupancy.Rmd
@@ -61,6 +61,8 @@ class: inverse, middle, center
 
 - Hierarchical models  
 
+- Extremely common 
+
 --
 - Decompose time series into:  
 
@@ -336,5 +338,7 @@ ggplot() +
 
 - computationally intensive  
 
-- usually produce biased estimates of $N$  
+- Can produce biased estimates of $N$ unless observations are repeated 
+
+- Often imprecise 
 
