--- a/vignettes/schedule.Rmd
+++ b/vignettes/schedule.Rmd
@@ -21,7 +21,6 @@ knitr::opts_chunk$set(
 source(here::here("R/MWF.R"))
 ```
 
-
 ```{r schedule, echo = FALSE}
 library(kableExtra)
 
@@ -46,11 +45,11 @@ schedule <- data.frame(WK = c("1", "", "",
                        Week = MW(first.day = "2025/01/06", last.day = "2025/04/28"),
                        Lecture = c("Course Introduction", "Introduction to Statistics", "", #1
       "Probability Refresher", "Probability Refresher", "", #2
-      "No class (MLK Day)", "Principles of Bayesian Inference (Part 1)", "", #3
-      "Principles of Bayesian Inference (Part 2)" , "Introduction to Linear Models and Nimble", "", #4
-      "Generalized Linear Model Review", "Informative Priors", "", #5
-      "Random Effects", "State Space Models", "", #6
-      "N-mixture Models", "More about N-mixture Models", "", #7
+      "No class (MLK Day)", "Snow Day!", "", #3
+      "Principles of Bayesian Inference (Part 1)", "Principles of Bayesian Inference (Part 2)" , "", #4
+      "Introduction to Linear Models and Nimble", "Generalized Linear Model Review", "", #5
+      "Informative Priors", "Random Effects", "", #6
+      "State Space Models", "N-mixture and occupancy Models", "", #7
       "Zero-inflated models", "Different types of observation processes", "", #8 
       "Spring Break - No Class", "Spring Break - No Class", "", #9
       "Known Fate", "Simple Movement Models", "", #10
@@ -63,14 +62,14 @@ schedule <- data.frame(WK = c("1", "", "",
       ""), 
                        Lab = c("", "Using R Markdown/Common Mathematical Notation", "",
                                "", "Data simulation techniques", "", 
+                               "", "Snow Day (no Lab)", "", 
                                "", "Basic MCMC", "",
                                "", "Regression analysis using Nimble", "", 
-                               "", "Choosing Priors", "",
-                               "", "Prior Predictive Checks", "", #be sure to include something about transformed priors
-                               "", "Solving Nimble errors", "", 
+                               "", "Choosing Priors", "", #be sure to include something about transformed priors
+                               "", "Missing Data", "", 
                                "", "Goodness of Fit tests", "",
                                "", "", "", # Spring break
-                               "", "Imputing Missing Information", "",
+                               "", "Week 9", "",
                                "", "Simple Model Selection and CMR", "", 
                                "", "Survival Models with Detection Error", "", 
                                "", "NimbleSCR package", "",
